fix: update z-index for navigation to ensure proper stacking order

--- a/css/reapet-styles/nav.css
+++ b/css/reapet-styles/nav.css
@@ -3,7 +3,7 @@
     top: 0;
     bottom: 0;
     left: -100%;
-    z-index: 10;
+    z-index: 11;
     width: 300px;
     height: 100vh;
     background-color: #fff;
